--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -150,7 +150,9 @@
   pages={L161108},
   year={2022},
   publisher={APS},
-  abbr={PRB}
+  abbr={PRB},
+  abstract={A fractional quantum Hall effect (FQHE) has been predicted in a topological flat band (FB) by a single-particle band structure combined with phenomenological theory or solution of a many-body lattice Hamiltonian with fuzzy parameters. A long-standing roadblock toward the realization of a FB-FQHE is lacking the many-body solution of specific materials under realistic conditions. We demonstrate a combined study of single-particle Floquet band theory with exact diagonalization (ED) of a many-body Hamiltonian. We show that a time-periodic circularly polarized laser inverts the sign of second-nearest-neighbor hopping in a kagome lattice and enhances spin-orbit coupling in one spin channel to produce a Floquet FB with a high flatness ratio of bandwidth over band gap, as exemplified in monolayer Pt3⁢C36⁢S12⁢H12. The ED of the resultant Floquet-kagome lattice Hamiltonian gives a one-third-filling ground state with a laser-dependent excitation gap of a FQH state, up to an estimated temperature above 70 K. Our findings pave the way for exploring the alluding high-temperature FB-FQHE.},
+  html={https://journals.aps.org/prb/abstract/10.1103/PhysRevB.105.L161108}
 }
 
 @article{sethi2021flat,
@@ -162,7 +164,9 @@
   pages={196403},
   year={2021},
   publisher={APS},
-  abbr={PRL}
+  abbr={PRL},
+  html={https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.126.196403},
+  abstract={The excitonic insulator (EI) state is a strongly correlated many-body ground state, arising from an instability in the band structure toward exciton formation. We show that the flat valence and conduction bands of a semiconducting diatomic Kagome lattice, as exemplified in a superatomic graphene lattice, can possibly conspire to enable an interesting triplet EI state, based on density-functional theory calculations combined with many-body 𝐺⁢𝑊 and Bethe-Salpeter equation. Our results indicate that massive carriers in flat bands with highly localized electron and hole wave functions significantly reduce the screening and enhance the exchange interaction, leading to an unusually large triplet exciton binding energy (∼1.1  eV) exceeding the 𝐺⁢𝑊 band gap by ∼0.2  eV and a large singlet-triplet splitting of ∼0.4  eV. Our findings enrich once again the intriguing physics of flat bands and extend the scope of EI materials.}
 }
 
 @article{liu2021sierpinski,
@@ -174,7 +178,9 @@
   pages={176102},
   year={2021},
   publisher={APS},
-  abbr={PRL}
+  abbr={PRL},
+  abstract={Deposition of Bi on InSb(111)B reveals a striking Sierpiński-triangle (ST)-like structure in Bi thin films. Such a fractal geometric topology is further shown to turn off the intrinsic electronic topology in a thin film. Relaxation of a huge misfit strain of about 30% to 40% between Bi adlayer and substrate is revealed to drive the ST-like island formation. A Frenkel-Kontrova model is developed to illustrate the enhanced strain relief in the ST islands offsetting the additional step energy cost. Besides a sufficiently large tensile strain, forming ST-like structures also requires larger adlayer-substrate and intra-adlayer elastic stiffnesses, and weaker intra-adlayer interatomic interactions.},
+  html={https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.126.176102}
 }
 
 @article{zhou2020realization,
@@ -186,7 +192,9 @@
   pages={230--235},
   year={2020},
   publisher={ACS Publications},
-  abbr={Nano Letters}
+  abbr={Nano Letters},
+  abstract={Using first-principles calculations, we investigate the electronic and topological properties of an antiferromagnetic (AFM) superatomic graphene lattice superimposed on a bipartite honeycomb lattice governed by Lieb’s theorem of itinerant magnetism. It affords a concrete material realization of the AFM honeycomb model with a Dirac Mott insulating state, characterized by a gap opening at the Dirac point due to inversion symmetry breaking by long-range AFM order. The opposite Berry curvatures of the K and K′ valleys induces a circular dichroism (CD) Hall effect. Different from the valley Hall effect that activates only one valley, the CD Hall effect activates carriers from both K and K′ valleys, generating the opposite directions of transversal Hall currents for the left- and right-handed circularly polarized light, respectively.},
+  html={https://pubs.acs.org/doi/10.1021/acs.nanolett.0c03579}
 }
 
 @article{zhou2020giant,
@@ -198,7 +206,9 @@
   pages={125115},
   year={2020},
   publisher={APS},
-  abbr={PRB}
+  abbr={PRB},
+  abstract={Circular dichroism (CD) is generally observed in the optically active chiral molecules that originate from macroscopic electric and magnetic dipoles, which is usually quite small. In solid states, the so-called valley CD may arise microscopically from interband transitions between two chiral electronic valley bands of nonzero Berry curvatures at a given 𝑘 point. However, generally, two sets of 𝐾 and 𝐾′ valleys coexist in the Brillouin zone with opposite chiral selectivities, so that the net CD is zero for the whole material. Here, we demonstrate a giant CD originating from photoexcitation between two chiral Chern flat bands of opposite Chern numbers, namely, the enantiomorphic flat Chern bands. The dissymmetry factor 𝑔 of such flat CD can reach the theoretical maximum value of 2 with the optimal spin-orbit coupling strength. Based on first-principles calculations, we identify that the Li intercalated bilayer 𝜋-conjugated nickel-bis(dithiolene) hosts a set of yin-yang kagome bands with an estimated large 𝑔=0.74 under magnetic field. Furthermore, based on the flat-CD mechanism, we propose two flatband devices of topological photodetectors and circularly polarized lasers.},
+  html={https://journals.aps.org/prb/abstract/10.1103/PhysRevB.102.125115}
 }
 
 @article{ni2020pi,
@@ -210,7 +220,9 @@
   pages={25827--25832},
   year={2020},
   publisher={Royal Society of Chemistry},
-  abbr={PCCP}
+  abbr={PCCP},
+  abstract={π-Orbital bonding plays an important role not only in traditional molecular science and solid-state chemistry but also in modern quantum physics and materials, such as the relativistic Dirac states formed by bonding and antibonding π-bands in graphene. Here, we disclose an interesting manifestation of π-orbitals in forming the Yin–Yang Kagome bands, which host potentially a range of exotic quantum phenomena. Based on first-principles calculations and tight-binding orbital analyses, we show that the frontier π2- and π3-orbitals in anilato-based metal–organic frameworks form concurrently a conduction and valence set of Kagome bands, respectively, but with opposite signs of lattice hopping to constitute a pair of enantiomorphic Yin and Yang Kagome bands, as recently proposed in a diatomic Kagome lattice. The twisted configuration of neighboring benzene-derived organic ligands bridged by an octahedrally O-coordinated metal ion is found to play a critical role in creating the opposite sign of lattice hopping for the π2- versus π3-orbitals. Our finding affords a new material platform to study π-orbital originated quantum chemistry and physics.},
+  html={https://pubs.rsc.org/en/content/articlelanding/2020/cp/d0cp03941a}
 }
 
 @article{zhou2019weyl,
@@ -222,7 +234,9 @@
   pages={201105},
   year={2019},
   publisher={APS},
-  abbr={PRB}
+  abbr={PRB},
+  html={https://journals.aps.org/prb/abstract/10.1103/PhysRevB.99.201105},
+  abstract={Following the discovery of topological insulators (TIs), topological Dirac/Weyl semimetal has attracted much recent interest. A prevailing mechanism for the formation of Weyl points is by breaking time-reversal symmetry (TRS) or spatial inversion symmetry of a Dirac point. Here we demonstrate a generic formation mechanism for Weyl points by breaking TRS of a three-dimensional (3D) TI featured with highly degenerate 3D flat bands (FBs). It is in direct contrast to the conventional view that breaking TRS of a 2D/3D TI leads to a Chern insulator exhibiting quantum anomalous Hall effect. Based on a tight-binding model of pyrochlore lattice, we show that this unusual 3D-FB-enabled Weyl state may contain only a minimum of two Weyl points. Furthermore, using first-principles calculations, we identify this Weyl state in a real material Sn2Nb2O7 The main features of the resulting Weyl points are analyzed with respect to symmetry, topological invariant and surface state. Our finding sheds new light on our fundamental understanding of topological physics and significantly extends the scope of Weyl semimetals to attract immediate experimental interest.}
 }
 
 @article{hu2018ubiquitous,
@@ -234,7 +248,9 @@
   pages={066401},
   year={2018},
   publisher={APS},
-  abbr={PRL}
+  abbr={PRL},
+  html={https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.121.066401},
+  abstract={We theoretically demonstrate that screw dislocation (SD), a 1D topological defect widely present in semiconductors, exhibits ubiquitously a new form of spin-orbit coupling (SOC) effect. Differing from the widely known conventional 2D Rashba-Dresselhaus (RD) SOC effect that typically exists at surfaces or interfaces, the deep-level nature of SD-SOC states in semiconductors readily makes it an ideal SOC. Remarkably, the spin texture of 1D SD-SOC, pertaining to the inherent symmetry of SD, exhibits a significantly higher degree of spin coherency than the 2D RD-SOC. Moreover, the 1D SD-SOC can be tuned by ionicity in compound semiconductors to ideally suppress spin relaxation, as demonstrated by comparative first-principles calculations of SDs in Si/Ge, GaAs, and SiC. Our findings therefore open a new door to manipulating spin transport in semiconductors by taking advantage of an otherwise detrimental topological defect.}
 }
 
 @article{zhang2018band,
@@ -246,7 +262,9 @@
   pages={16759--16764},
   year={2018},
   publisher={Royal Society of Chemistry},
-  abbr={Nanoscale}
+  abbr={Nanoscale},
+  html={https://pubs.rsc.org/en/content/articlelanding/2018/nr/c8nr04660c},
+  abstract={A thickness dependent band gap is commonly found in layered two-dimensional (2D) materials. Here, using a C3N bilayer as a prototypical model, we systematically investigated the evolution of a band gap from a single layer to a bilayer using first principles calculations and tight binding modeling. We show that in addition to the widely known effect of interlayer hopping, de-charge transfer also plays an important role in tuning the band gap. The de-charge transfer is defined with reference to the charge states of atoms in the single layer without stacking, which shifts the energy level and modifies the band gap. Together with band edge splitting induced by the interlayer hopping, the energy level shifting caused by the de-charge transfer determines the size of the band gap in bilayer C3N. Our finding, applicable to other 2D semiconductors, provides an alternative approach for realizing band gap engineering in 2D materials.}
 }
 
 @article{zhang2017theoretical,
@@ -258,7 +276,9 @@
   pages={6166--6170},
   year={2017},
   publisher={ACS Publications},
-  abbr={Nano Letters}
+  abbr={Nano Letters},
+  html={https://pubs.acs.org/doi/10.1021/acs.nanolett.7b02795},
+  abstract={Superconductivity is a fascinating quantum phenomenon characterized by zero electrical resistance and the Meissner effect. To date, several distinct families of superconductors (SCs) have been discovered. These include three-dimensional (3D) bulk SCs in both inorganic and organic materials as well as two-dimensional (2D) thin film SCs but only in inorganic materials. Here we predict superconductivity in 2D and 3D organic metal–organic frameworks by using first-principles calculations. We show that the highly conductive and recently synthesized Cu-benzenehexathial (BHT) is a Bardeen–Cooper–Schrieffer SC. Remarkably, the monolayer Cu-BHT has a critical temperature (Tc) of 4.43 K, while Tc of bulk Cu-BHT is 1.58 K. Different from the enhanced Tc in 2D inorganic SCs which is induced by interfacial effects, the Tc enhancement in this 2D organic SC is revealed to be the out-of-plane soft-mode vibrations, analogous to surface mode enhancement originally proposed by Ginzburg. Our findings not only shed new light on better understanding 2D superconductivity but also open a new direction to search for SCs by interface engineering with organic materials.}
 }
 
 @article{zhou2016enhancing,
@@ -270,5 +290,7 @@
   pages={6058--6063},
   year={2016},
   publisher={ACS Publications},
-  abbr={Nano Letters}
+  abbr={Nano Letters},
+  html={https://pubs.acs.org/doi/10.1021/acs.nanolett.6b02052},
+  abstract={In the hydrogen evolution reaction (HER), the reactivity as a function of the hydrogen adsorption energy on different metal substrates follows a well-known volcano curve, peaked at the precious metal Pt. The goal of turning nonprecious metals into efficient catalysts for HER and other important chemical reactions is a fundamental challenge; it is also of technological significance. Here, we present results toward achieving this goal by exploiting the synergistic power of marginal catalysis and confined catalysis. Using density functional theory calculations, we first show that the volcano curve stays qualitatively intact when van der Waals attractions between a hydrogen adatom and different metal (111) surfaces are included. We further show that the hydrogen adsorption energy on the metal surfaces is weakened by 0.12–0.23 eV when hydrogen is confined between graphene and the metal surfaces, with Ni exhibiting the largest change. In particular, we find that the graphene-modified volcano curve peaks around Ni, whose bare surface already possesses moderate (or marginal) reactivity, and the corresponding HER rate of graphene-covered Ni is comparable to that of bare Pt. A hydrogen adatom has high mobility within the confined geometry. These findings demonstrate that graphene-covered Ni is an appealing effective, stable, and economical catalytic platform for HER.}
 }
