--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -65,7 +65,7 @@
 
 @article{pan2023growth,
   title={Growth of mesoscale ordered two-dimensional hydrogen-bond organic framework with the observation of flat band},
-  author={Pan*, Minghu and Zhang*, Xin and Zhou*, Yinong and Wang, Pengdong and Bian, Qi and Liu, Hang and Wang, Xingyue and Li, Xiaoyin and Chen, Aixi and Lei, Xiaoxu and others},
+  author={Pan*, Minghu and Zhang*, Xin and Zhou*, Yinong and Wang*, Pengdong and Bian, Qi and Liu, Hang and Wang, Xingyue and Li, Xiaoyin and Chen, Aixi and Lei, Xiaoxu and others},
   journal={Physical Review Letters},
   volume={130},
   number={3},
