--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -41,6 +41,24 @@
   html={https://onlinelibrary.wiley.com/doi/10.1002/adma.202312597}
 }
 
+@article{PhysRevB.110.045434,
+  title={Higher-dimensional spin selectivity in chiral crystals},
+  author={Zhou, Yinong and Cordova, Dmitri Leo M. and Milligan, Griffin M. and Arguilla, Maxx Q. and Wu, Ruqian},
+  journal={Phys. Rev. B},
+  volume={110},
+  issue={4},
+  pages={045434},
+  numpages={6},
+  year={2024},
+  month={Jul},
+  publisher={American Physical Society},
+  doi={10.1103/PhysRevB.110.045434},
+  url={https://link.aps.org/doi/10.1103/PhysRevB.110.045434},
+  abbr={PRB},
+  abstract={This study aims to investigate the interplay between chiral-induced spin-orbit coupling along the screw axis and antisymmetric spin-orbit coupling (ASOC) in the normal plane within a chiral crystal, using both general model analysis and first-principles simulations of InSeI, a chiral van der Waals crystal. While chiral molecules of light atoms typically exhibit spin selectivity only along the screw axis, chiral crystals with heavier atoms can have strong ASOC effects that influence spin-momentum locking in all directions. The resulting phase diagram of spin accumulation shows the potential for controlling phase transition and flipping spin by reducing symmetry through surface cleavage, thickness reduction or strain. We also experimentally synthesized high-quality InSeI crystals to demonstrate the feasibility and thermal stability of the proposed material. This lays a solid foundation for the realization of transverse spin selectivity in chiral crystals, facilitating the development of spintronic devices.},
+  html={https://journals.aps.org/prb/abstract/10.1103/PhysRevB.110.045434}
+}
+
 @article{wu2024electronic,
   title={Electronic transport characteristics and nanodevice designs for $\beta$-HfNCl monolayer},
   author={Wu, Yi and Li, Yilian and Fan, Xiaozheng and Zhou, Yinong and Ma, Chunlan and Gong, Shijing and Wang, Tianxing and Yang, Feng and Wu, Ruqian and An, Yipeng},
@@ -117,16 +135,6 @@
   abbr={PRB},
   abstract={Intrinsic topological superconducting materials are exotic and vital to develop the next-generation topological superconducting devices, topological quantum calculations, and quantum information technologies. Here, we predict the topological and nodal superconductivity of NiAs-type 𝑀⁢S (𝑀=NbandTa) transition-metal sulfides. We reveal their higher-order topology nature with an index of 𝑍4=2. These materials have a higher 𝑇c than the Nb or Ta metal superconductors due to their flat band and strong electron-phonon coupling nature. Electron doping and lighter isotopes can effectively enhance the 𝑇c. Our findings show that the 𝑀⁢S (𝑀=NbandTa) systems can be platforms to study exotic physics in the higher-order topological superconductors, and provide a theoretical support to utilize them as the topological superconducting devices in the field of advanced topological quantum calculations and information technologies.},
   html={https://journals.aps.org/prb/abstract/10.1103/PhysRevB.108.054519}
-}
-
-@article{zhou2023higher,
-  title={Higher-dimensional spin selectivity in chiral crystals},
-  author={Zhou, Yinong and Cordova, Dmitri Leo M and Milligan, Griffin M and Arguilla, Maxx Q and Wu, Ruqian},
-  journal={arXiv preprint arXiv:2305.18637},
-  year={2023},
-  abbr={arXiv},
-  abstract={This study aims to investigate the interplay between chiral-induced spin-orbit coupling along the screw axis and antisymmetric spin-orbit coupling (ASOC) in the normal plane within a chiral crystal, using both general model analysis and first-principles simulations of InSeI, a chiral van der Waals crystal. While chiral molecules of light atoms typically exhibit spin selectivity only along the screw axis, chiral crystals with heavier atoms can have strong ASOC effects that influence spin-momentum locking in all directions. The resulting phase diagram of spin texture shows the potential for controlling phase transition and flipping spin by reducing symmetry through surface cleavage, thickness reduction or strain. We also experimentally synthesized high-quality InSeI crystals of the thermodynamically stable achiral analogue which showed exposed (110) facets corresponding to single-handed helices to demonstrate the potential of material realization for higher-dimensional spin selectivity in the development of spintronic devices.},
-  arxiv={2305.18637}
 }
 
 @article{zhou2022excited,
