--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -77,7 +77,7 @@
   author={Lopez, Diana and Zhou, Yinong and Cordova, Dmitri and Milligan, Griffin and Ogura, Kaleolani and Wu, Ruqian and Arguilla, Maxx},
   journal={Journal of the American Chemical Society},
   year={2024},
-  publisher={ACS Publications}
+  publisher={ACS Publications},
   abbr={JACS},
   abstract={The rediscovery of one-dimensional (1D) and quasi-1D (q-1D) van der Waals (vdW) crystals ushered the realization of nascent physical properties in 1D that are suitable for applications including photonics, electronics, and sensing. However, despite renewed interest in the creation and understanding of the physical properties of 1D and q-1D vdW crystals, the lack of accessible synthetic pathways for growing well-defined nanostructures that extend across several length scales remains. Using the highly anisotropic 1D vdW NbS3-I crystal as a model phase, we present a catalyst-free and bottom-up synthetic approach to access ultra-long nanowires, with lengths reaching up to 7.9 mm and with uniform thicknesses ranging from 13 to 190 nm between individual nanowires. Control over the synthetic parameters enabled the modulation of intra- and inter-chain growth modalities to selectively yield 1D nanowires or quasi-2D nanoribbons. Comparative synthetic and density functional theory (DFT) studies with a closely related non-dimerized phase, ZrS3, show that the unusual preferential growth along 1D can be correlated to the strongly anisotropic bonding and dimeric nature of NbS3 Type-I. These results, owing to the ubiquity of dimerization in Peierls-distorted 1D crystals, will open opportunities to grow ultra-long nanowires for high-fidelity optical and electronic devices approaching the sub-nanoscale regime.},
   html={https://pubs.acs.org/doi/10.1021/jacs.4c05730}
