--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,18 @@
 
 @string{APS = {American Physical Society,}}
 
+@article{yang2024phonon,
+  title={Phonon modes and electron-phonon coupling at the FeSe/SrTiO3 interface},
+  author={Yang, Hongbin and Zhou, Yinong and Miao, Guangyao and Rusz, Ján and Yan, Xingxu and Guzman, Francisco and Xu, Xiaofeng and Xu, Xianghan and Aoki, Toshihiro and Zeiger, Paul and Zhu, Xuetao and Wang, Weihua and Guo, Jiandong and Wu, Ruqian and Pan, Xiaoqing},
+  journal={Nature},
+  pages={1--5},
+  year={2024},
+  publisher={Nature Publishing Group UK London},
+  abbr={Nature},
+  abstract={The remarkable increase in superconducting transition temperature (Tc) observed at the interface of one-unit-cell FeSe films on SrTiO3 substrates (1 uc FeSe/STO)1 has attracted considerable research into the interface effects2–6. Although this high Tc is thought to be associated with electron–phonon coupling (EPC)2, the microscopic coupling mechanism and its role in the superconductivity remain elusive. Here we use momentum-selective high-resolution electron energy loss spectroscopy to atomically resolve the phonons at the FeSe/STO interface. We uncover new optical phonon modes, coupling strongly with electrons, in the energy range of 75–99 meV. These modes are characterized by out-of-plane vibrations of oxygen atoms in the interfacial double-TiOx layer and the apical oxygens in STO. Our results also demonstrate that the EPC strength and superconducting gap of 1 uc FeSe/STO are closely related to the interlayer spacing between FeSe and the TiOx terminated STO. These findings shed light on the microscopic origin of the interfacial EPC and provide insights into achieving large and consistent Tc enhancement in FeSe/STO and potentially other superconducting systems.},
+  html={https://doi.org/10.1038/s41586-024-08118-0}
+}
+
 @article{chen2024exceptional,
   title={Exceptional electronic transport and quantum oscillations in thin bismuth crystals grown inside van der Waals materials},
   author={Chen, Laisi and Wu, Amy X and Tulu, Naol and Wang, Joshua and Juanson, Adrian and Watanabe, Kenji and Taniguchi, Takashi and Pettes, Michael T and Campbell, Marshall A and Xu, Mingjie and Gadre, Chaitanya A. and Zhou, Yinong and Chen, Hangman and Cao, Penghui and Jauregui, Luis A. and Wu, Ruqian and Pan, Xiaoqing and Sanchez-Yamagishi, Javier D.},
