--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,13 @@
 
 @string{APS = {American Physical Society,}}
 
+@article{mustafa2025dilute,
+  title={Dilute Magnetic Impurity-Induced Effective Phonon Magnetic Moment in Fe-doped Monolayer MoS2},
+  author={Mustafa, Hussam and Ye, Gaihua and Nnokwe, Cynthia Chiamaka and Fang, Mengqi and Kandil, Mohamed and Al-Mahboob, Abdullah and Wu, Kai and Stollenwerk, Andrew J and Kidd, Timothy E and Shand, Paul and others},
+  journal={2D Materials},
+  year={2025}
+}
+
 @article{yang2024phonon,
   title={Phonon modes and electron-phonon coupling at the FeSe/SrTiO3 interface},
   author={Yang, Hongbin and Zhou, Yinong and Miao, Guangyao and Rusz, Ján and Yan, Xingxu and Guzman, Francisco and Xu, Xiaofeng and Xu, Xianghan and Aoki, Toshihiro and Zeiger, Paul and Zhu, Xuetao and Wang, Weihua and Guo, Jiandong and Wu, Ruqian and Pan, Xiaoqing},
