--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,6 +8,9 @@
   author={Mustafa, Hussam and Ye, Gaihua and Nnokwe, Cynthia Chiamaka and Fang, Mengqi and Kandil, Mohamed and Al-Mahboob, Abdullah and Wu, Kai and Stollenwerk, Andrew J and Kidd, Timothy E and Shand, Paul and others},
   journal={2D Materials},
   year={2025}
+  abbr={2D Materials},
+  abstract={Realization of large effective phonon magnetic moment in monolayer MoS2 has established an important route for exploring intriguing magnetic phenomena in a nonmagnetic material. The sizable coupling between the orbital transition and the circularly polarized phonon results in the large effective phonon magnetic moment. In this work, using magneto-Raman spectroscopy, we investigate substitutional doping of magnetic atoms as a tuning knob of the electronic and phononic properties of MoS2. We show that Fe-doping polarizes the spin of the conduction bands and introduces a localized Fe band underneath the conduction band. As a result, an additional orbital transition between the Mo 4d and Fe 3d states emerges, producing an orbital-phonon hybridized mode at 283 cm−1. Our magnetic field dependent measurements demonstrate that this new mode carries 2.8 μB effective phonon magnetic moment, which is comparable to that of the undoped MoS2. Moreover, even though a long-range magnetic order is absent in Fe-doped MoS2, the local magnetic moment of Fe modifies the nature of the spin fluctuation, producing monotonically increasing quasielastic scattering spectral weight as temperature decreases. Our results highlight two-dimensional dilute magnetic semiconductors synthesized by substitutional doping as a promising material platform to manipulate the phonon magnetic moment through orbital-phonon coupling.}
+  html={https://iopscience.iop.org/article/10.1088/2053-1583/ae04fc/meta}
 }
 
 @article{yang2024phonon,
